Adding Web Worker
I've added a normal script (fibo), and a complimentary web worker
(fibo.worker.js).  The two files can communicate with one another
by postingMessages, similar to what you would see with iframes
talking to one another.  Nifty!

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     </style>
 </head>
 <body>
-    <form>
-        <input id="input" type="number" placeholder="Enter Fibo Number Here" />
-        <input id="output" type="number" placeholder="Result Here" readonly />
+    <form id="fibo">
+        <input id="fiboInput" type="number" placeholder="Enter Fibo Number Here" />
+        <input id="fiboOutput" type="number" placeholder="Result Here" readonly />
         <input type="submit" />
     </form>
+    <script src="./scripts/fibo.js"></script>
 </body>
 </html>
