Pulled styles out, added a load wheel
Pulled out styles from <style> tag into a spreadsheet, and added
a simple spreadsheet.

--- a/index.html
+++ b/index.html
@@ -2,15 +2,7 @@
 <html>
 <head>
     <title>Simple Web Worker Demo</title>
-    <style>
-        * {box-sizing: border-box}
-        html, body {height: 100%}
-        html {background: #fafafa;}
-        body {display: flex;justify-content: center;align-items: center;}
-        form {background:#efefef;box-shadow: 5px 5px 5px #ccc;}
-        input {margin: 1rem;padding: 0.5rem;min-width: 10rem;}
-        input[readonly] {cursor: not-allowed}
-    </style>
+    <link rel="stylesheet" type="text/css" href="./styles/simple.css" />
 </head>
 <body>
     <form id="fibo">
